# django-blog-202411

./: .gitignore  pyproject.toml
blog/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_category.py  0003_alter_comment_post_alter_post_tags.py  0004_tag_description.py  0005_category_description.py  0006_post_image.py  0007_alter_post_options_alter_post_image.py  0008_alter_post_options.py  0009_alter_post_options.py  0010_alter_category_options_alter_comment_options_and_more.py
blog/static/blog/js/: hello.js
blog/templates/: blog_base.html
blog/templates/blog/: category_create.html  category_delete.html  category_detail.html  category_list.html  category_update.html  post_create.html  post_delete.html  post_detail.html  post_list.html  post_update.html  tag_confirm_delete.html  tag_detail.html  tag_form.html  tag_list.html
core/: forms.py  settings.py  urls.py
static/js/: main.js
templates/: _form.html  _navbar.html  base.html
users/: admin.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: user_base.html
users/templates/users/: cbv.html  login.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  register.html
users/templates/users/email/: password_reset_content.html
