[tool.poetry]
name = "django-blog-202411"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
django-extensions = "^3.2.3"


[tool.poetry.group.dev.dependencies]
djlint = "^1.36.1"
ipython = "^8.29.0"
werkzeug = "^3.1.3"
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.djlint]
profile = "django"
max_blank_lines = 1
line_break_after_multiline_tag = true
